# meta-improve

./: .gitignore  README.md  pyproject.toml
docs/: self-improving-agent-design.md
metaimprove/: config.py  types.py
metaimprove/agent/: orchestrator.py  plan_execute.py  query.py  reviewer.py
metaimprove/entrypoints/: cli.py
metaimprove/improve/: models.py  orchestrator.py  policy_gate.py  trajectory.py
metaimprove/llm/: base.py  collect.py  openai_compatible.py  parse.py
metaimprove/mcp/: client.py  config.py
metaimprove/memory/: manager.py
metaimprove/plan/: models.py  planner.py
metaimprove/policy/: __init__.py  audit_log.py  command_guard.py  path_guard.py
metaimprove/prompt/: assembler.py
metaimprove/rag/: code_index.py
metaimprove/runtime/: api.py  state.py
metaimprove/snapshot/: service.py
metaimprove/tools/: base.py  builtins.py  executor.py  registry.py
