[project]
name = "meta-improve"
version = "0.1.0"
description = "A reliability-first, spec-driven, human-in-the-loop self-improving coding agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["agent", "llm", "self-improving", "cli", "react", "mcp"]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2",
  "typer>=0.12.3",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "mcp>=1.27,<2",
]

[project.scripts]
meta-improve = "metaimprove.entrypoints.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["metaimprove"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
